[ADD] mul_inv, mod_exp, is_prime, 2 prime_gen, 2 gcd algo in helper, move few funcs to metric_plot, implement RSA

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,6 @@ envs/
 **/src/algorithms/aes.py
 **/src/algorithms/ecc.py
 **/src/algorithms/sha.py
-**/src/algorithms/rsa.py
+**/src/algorithms/rsa_.py
 **/src/algorithms/3des.py
 **/src/algorithms/base_.py
