--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ envs/
 
 # Algorithm files
 **/src/algorithms/ecc.py
-**/src/algorithms/sha.py
+**/src/algorithms/sha_.py
 **/src/algorithms/rsa_.py
 **/src/algorithms/ecc_.py
 **/src/algorithms/base_.py
